@@ -1,1 +1,4 @@
 This is a simple demo for kafka flink integration
+
+VM argument
+--add-opens java.base/java.util=ALL-UNNAMED
